// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginRequest > снапшот структуры 1`] = `
{
  "email": "user@example.com",
  "password": "fakePassword123!",
}
`;

exports[`MeResponse > снапшот структуры 1`] = `
{
  "email": "user@example.com",
  "user_id": "123e4567-e89b-12d3-a456-426614174000",
  "workspace_id": "123e4567-e89b-12d3-a456-426614174000",
}
`;

exports[`RefreshRequest > снапшот структуры 1`] = `
{
  "refresh_token": "refresh_token_xyz789",
}
`;

exports[`RegisterRequest > снапшот структуры 1`] = `
{
  "email": "user@example.com",
  "password": "fakePassword123!",
  "workspace_name": "Fake Workspace",
}
`;

exports[`TokenPairResponse > снапшот структуры 1`] = `
{
  "access_token": "ey.fake.header.fake.payload",
  "expires_in": 3600,
  "refresh_token": "refresh_token_abc123def456",
  "token_type": "bearer",
  "user_id": "user_123",
  "workspace_id": "workspace_456",
}
`;

exports[`Интеграционные тесты auth flow > снапшот полного auth flow 1`] = `
{
  "login": {
    "request": {
      "email": "user@example.com",
      "password": "fakePassword123!",
    },
    "response": {
      "email": "user@example.com",
      "user_id": "user-123",
      "workspace_id": "workspace-456",
    },
  },
  "register": {
    "request": {
      "email": "user@example.com",
      "password": "fakePassword123!",
      "workspace_name": "Fake Workspace",
    },
    "response": {
      "access_token": "token123",
      "refresh_token": "refresh456",
      "token_type": "bearer",
    },
  },
}
`;
